sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var fini = False
  while (!fini){
    var echanges = 0
    for (k = 0 to getNombreValeur()-2){
      if (getValeur(k) > getValeur(k+1)){
        echange(k, k+1);
        echanges += 1;
      }
    }
    if (echanges == 0){
      fini = True;
    }
  }
}